# whisper-practice

./: main.ipynb  pyproject.toml
