[project]
name = "whisper-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.1.1",
    "gradio>=5.29.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "openai-whisper>=20240930",
    "pyaudio>=0.2.13",
    "webrtcvad>=2.0.10",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "ctranslate2>=3.0.0",
    "soundfile>=0.12.1",
]
